# try-pybind11

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bind.cpp  compare.py  example.cpp  matrix.cpp  matrix.h  pymatrix.py
